# orc

./: .gitignore  README.md  Requirements.md  agents-mini.md  agents.md  azure-pipelines.example.yml  main.py  pyproject.toml
orchestrator/: __init__.py  config.py  engine.py  exceptions.py  graph.py  models.py  path_safety.py  pipeline.py  volume_prep.py
orchestrator/artifact_store/: __init__.py  artifact_store.py
orchestrator/executor/: __init__.py  docker_executor.py  executor.py
orchestrator/logger/: __init__.py  logger.py
orchestrator/scheduler/: __init__.py  scheduler.py
orchestrator/server/: event_bus.py  http_server.py  metrics.py  reporter.py  tee_logger.py
tests/: conftest.py  test_artifact_store.py  test_config.py  test_engine.py  test_event_bus.py  test_executor.py  test_graph.py  test_http_server.py  test_integration.py  test_integration_http_server.py  test_main.py  test_scheduler.py  test_sse_reporter.py  test_tee_stream.py  test_volume_prep.py
tests/fixtures/: integration_plan.yaml
tests/fixtures/qt_wasm_compile/: Dockerfile
tests/fixtures/qt_wasm_orchestration/: compile_qt.sh  plan.yaml.tmpl
tests/fixtures/sccache_consumer/: Dockerfile
tests/fixtures/sccache_orchestration/: compile_a.sh  compile_b.sh  file_a.c  file_b.c  plan.yaml.tmpl
tests/fixtures/sccache_redis/: consumer.sh  plan.yaml.tmpl
