[project]
name = "build-orch"
version = "0.1.0"
description = "Build orchestration system for Azure DevOps pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
build-orch = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that require a running Docker daemon",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
